# motyve.us

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/routers/: __init__.py  contractdata.py  index.py  policy.py
app/static/css/: contractdata.css  index.css  policy.css  style.css
app/static/js/: contractdata.js
app/templates/: base.html
app/templates/pages/: contractdata.html  index.html  policy.html
app/utils/: env.py  logger.py
scripts/: dev.ps1  prod.sh
